Added navigation content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-<p>hack!</p>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>alexmilowski/xproc2-specification</title>
+</head>
+<body>
+<h1>Published files from alexmilowski/xproc2-specification</h1>
+
+<p>This site hosts Alex Miłowski's “private” drafts of
+<cite>XProc 2.0: An XML Pipeline Language</cite> baked fresh
+automagically by <a href="http://travis-ci.org/">Travis CI</a> after
+every commit.</p>
+<dl>
+<dt>My “stable” branch:</dt>
+<dd>
+<ul>
+<li><a href="/xproc2-specification/langspec/xproc20/head">XProc 2.0: An XML Pipeline Language</a>
+specification (28 October 2014)</li>
+<li><a href="/xproc2-specification/langspec/xproc20/head/ns/xproc.html">Namespace document</a>
+for <code>http://www.w3.org/ns/xproc</code></li>
+<li><a href="/xproc2-specification/langspec/xproc20/head/ns/xproc-step.html">Namespace document</a>
+for <code>http://www.w3.org/ns/xproc-step</code></li>
+<li><a href="/xproc2-specification/langspec/xproc20/head/ns/xproc-error.html">Namespace document</a>
+for <code>http://www.w3.org/ns/xproc-error</code></li>
+</ul>
+</dd>
+<dt>initial-env</dt>
+<dd>
+<ul>
+<li><a href="/xproc2-specification/langspec/initial-env/head">XProc 2.0: An XML Pipeline Language</a> specification (28 October 2014)</li>
+<li><a href="/xproc2-specification/langspec/initial-env/head/ns/xproc.html">Namespace document</a> for <code>http://www.w3.org/ns/xproc</code></li>
+<li><a href="/xproc2-specification/langspec/initial-env/head/ns/xproc-step.html">Namespace document</a> for <code>http://www.w3.org/ns/xproc-step</code></li>
+<li><a href="/xproc2-specification/langspec/initial-env/head/ns/xproc-error.html">Namespace document</a> for <code>http://www.w3.org/ns/xproc-error</code></li>
+</ul>
+</dd>
+
+</dl>
+
+<p>These documents have all the normative force one would expect of the
+scribblings of a mad man.</p>
+
+<p>If you have a question or comment about the XProc specification, please
+raise it as
+<a href="https://github.com/xproc/xproc2-specification/issues">an issue</a>
+on the specification repository.</p>
+
+</body>
+</html>
