--- a/index.html
+++ b/index.html
@@ -10,26 +10,11 @@
 automagically by <a href="http://travis-ci.org/">Travis CI</a> after
 every commit.</p>
 <dl>
-<dt>My “stable” branch:</dt>
+<dt>My “editor” branch:</dt>
 <dd>
 <ul>
-<li><a href="/xproc2-specification/langspec/xproc20/head">XProc 2.0: An XML Pipeline Language</a>
-specification (28 October 2014)</li>
-<li><a href="/xproc2-specification/langspec/xproc20/head/ns/xproc.html">Namespace document</a>
-for <code>http://www.w3.org/ns/xproc</code></li>
-<li><a href="/xproc2-specification/langspec/xproc20/head/ns/xproc-step.html">Namespace document</a>
-for <code>http://www.w3.org/ns/xproc-step</code></li>
-<li><a href="/xproc2-specification/langspec/xproc20/head/ns/xproc-error.html">Namespace document</a>
-for <code>http://www.w3.org/ns/xproc-error</code></li>
-</ul>
-</dd>
-<dt>initial-env</dt>
-<dd>
-<ul>
-<li><a href="/xproc2-specification/langspec/initial-env/head">XProc 2.0: An XML Pipeline Language</a> specification (28 October 2014)</li>
-<li><a href="/xproc2-specification/langspec/initial-env/head/ns/xproc.html">Namespace document</a> for <code>http://www.w3.org/ns/xproc</code></li>
-<li><a href="/xproc2-specification/langspec/initial-env/head/ns/xproc-step.html">Namespace document</a> for <code>http://www.w3.org/ns/xproc-step</code></li>
-<li><a href="/xproc2-specification/langspec/initial-env/head/ns/xproc-error.html">Namespace document</a> for <code>http://www.w3.org/ns/xproc-error</code></li>
+<li><a href="langspec/master/head/xproc20/">XProc 2.0: An XML Pipeline Language</a>
+specification</li>
 </ul>
 </dd>
 
